@@ -1,3 +1,7 @@
+2010-09-01  john ffitch  <jpff@codemist.co.uk>
+
+	* Opcodes/gab/gab.c (adsynt2): Phase not handled correctly
+
 2010-08-31  john ffitch  <jpff@codemist.co.uk>
 
 	* Engine/csound_orc_expressions.c: Many changes to make if_then
